# infinispan-llama-stack-rag-demo

./: README.md  docker-compose.yaml  pyproject.toml  with-rag.py  without-rag.py
distro/: infinispan.yaml
knowledge/: chelonofelodynamics_paper.md
