[project]
name = "llama-stack-rag-infinispan-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chardet>=7.4.3",
    "llama-stack>=0.7.1",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "pypdf>=6.10.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]
